<resources>
    <string name="app_name">Basic Calculator</string>
    <string name="result_textfield">0</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="multiply">*</string>
    <string name="subtract">-</string>
    <string name="add">+</string>
    <string name="divide">/</string>
    <string name="equals">=</string>
    <string name="result">%s</string>
    <string name="clear">C</string>
    <string name="plus_minus">+/-</string>
    <string name="percent">%</string>
    <string name="delete">←</string>
    <string name="calculation">%s %s %s</string>
    <string name="error">Error</string>
    <string name="division_by_zero">Division by zero</string>
</resources>