<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/result_textfield"
        android:padding="8dp"
        android:textAlignment="viewEnd"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/zero"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button_two"
        app:layout_constraintStart_toStartOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/button_two" />

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/one"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_two"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_four" />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/two"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_three"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_one"
        app:layout_constraintTop_toBottomOf="@+id/button_five" />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/three"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_subtract"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_two"
        app:layout_constraintTop_toBottomOf="@+id/button_six" />

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/four"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_five"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_seven" />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/five"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_six"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_four"
        app:layout_constraintTop_toBottomOf="@+id/button_eight" />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/six"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_five"
        app:layout_constraintTop_toBottomOf="@+id/button_nine" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/seven"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_eight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/eight"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_nine"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_seven"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/nine"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_eight"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="#E8E8E8"
        android:text="@string/dot"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/button_three"
        app:layout_constraintStart_toStartOf="@+id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/button_three" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#474747"
        android:text="@string/multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_six"
        app:layout_constraintTop_toBottomOf="@+id/button_divide" />

    <Button
        android:id="@+id/button_subtract"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#474747"
        android:text="@string/subtract"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_three"
        app:layout_constraintTop_toBottomOf="@+id/button_multiply" />

    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="#474747"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="@+id/button_subtract"
        app:layout_constraintStart_toStartOf="@+id/button_subtract"
        app:layout_constraintTop_toBottomOf="@+id/button_subtract" />

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#474747"
        android:text="@string/divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_nine"
        app:layout_constraintTop_toBottomOf="@+id/result" />

    <Button
        android:id="@+id/button_equals"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:backgroundTint="#474747"
        android:text="@string/equals"
        app:layout_constraintEnd_toEndOf="@+id/button_add"
        app:layout_constraintStart_toStartOf="@+id/button_zero"
        app:layout_constraintTop_toBottomOf="@+id/button_dot" />

</androidx.constraintlayout.widget.ConstraintLayout>